--- a/index.html
+++ b/index.html
@@ -418,9 +418,9 @@ h1 {
     				<div class="resume-wrap ftco-animate">
     					<span class="date"> Aug 2022- Dec 2023</span>
     					<h2>Master of Science</h2>
-						<h3> Computer Science</h3>
+						<h3>Cyber Security</h3>
     					<span class="position">University of North Carolina at Charlotte</span>
-    					<p class="mt-4">GPA : 4 </p>
+    					<p class="mt-4">GPA : 3.8 </p>
     				</div>
     			</div>
 
@@ -428,9 +428,9 @@ h1 {
     				<div class="resume-wrap ftco-animate">
     					<span class="date">Aug 2016- Sep 2020</span>
     					<h2>Bachelor of Technology</h2>
-						<h3> Computer Science & Engineering</h3>
-    					<span class="position"> Uttar Pradesh Technical University </span>
-    					<p class="mt-4">GPA : 3.7 </p>
+						<h3>Information Technology</h3>
+    					<span class="position">Jawaharlal Nehru Technological University</span>
+    					<p class="mt-4">GPA : 3.0 </p>
     				</div>
 				</div>
     		</div>
