--- a/index.html
+++ b/index.html
@@ -276,9 +276,7 @@ h1 {
 								<h2 class="mb-4" style="color: #ffbd39;">About Me</h2>
 								
 								<p>
-									With over 3 years of experience as a software engineer, I am a master's graduate with a profound interest in technology and data,
-									dedicated to solving complex problems. I am eager to collaborate on transformable projects and transition into research and development (R&D)
-									in the field of software development. I aim to join organizations where I can contribute to cutting-edge R&D projects as a Software Engineer. 
+									I’m Rahul Banerjee, a cybersecurity professional with over six years of experience in threat detection, vulnerability management, and incident response. Currently, I work as a Security Researcher, focusing on advanced attack simulations for IoT and grid computing to help organizations fortify their defenses against evolving threats. My background spans SOC operations, penetration testing, and real-time threat intelligence, and I actively sharpen my skills through CTF competitions, ranking among the top 5% on TryHackMe. Armed with certifications like CISSP, AWS Security Specialty, and Splunk Core, I’m driven by a passion for continuous learning and innovation in the cybersecurity space. I aim to join organizations where I can contribute to cutting-edge R&D projects as a Software Engineer. 
 									Feel free to connect with me :) </p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Computer Science &amp; Software Engineering </span></li>
