--- a/index.html
+++ b/index.html
@@ -279,10 +279,10 @@ h1 {
 									I’m Rahul Banerjee, a cybersecurity professional with over six years of experience in threat detection, vulnerability management, and incident response. Currently, I work as a Security Researcher, focusing on advanced attack simulations for IoT and grid computing to help organizations fortify their defenses against evolving threats. My background spans SOC operations, penetration testing, and real-time threat intelligence, and I actively sharpen my skills through CTF competitions, ranking among the top 5% on TryHackMe. Armed with certifications like CISSP, AWS Security Specialty, and Splunk Core, I’m driven by a passion for continuous learning and innovation in the cybersecurity space. I aim to join organizations where I can contribute to cutting-edge R&D projects as a Software Engineer. 
 									Feel free to connect with me :) </p>
 								<ul class="about-info mt-4 px-md-0 px-2">
-									<li class="d-flex"><span>Profile:</span> <span>Computer Science &amp; Software Engineering </span></li>
+									<li class="d-flex"><span>Profile:</span> <span>Cyber Security &amp; Security Operations </span></li>
 									<li class="d-flex"><span>Education:</span> <span>Master of Science, Bachelor of Technology</span></li>
-									<li class="d-flex"><span>Language:</span> <span>English, Spanish, Hindi, Tamil, Malayalam </span></li>
-									<li class="d-flex"><span>Interest:</span> <span>Traveling, Networking, Volunteering </span></li>
+									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Bengali </span></li>
+									<li class="d-flex"><span>Interest:</span> <span>Football, Music, Biking </span></li>
 									
 								</ul>
 							</div>
@@ -292,10 +292,10 @@ h1 {
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
 								<p class="mb-4">
-									<span class="number" data-number="20">0</span> <span>+</span>
+									<span class="number" data-number="10">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
-								<p><a href="https://github.com/krishnanlavanya" class="btn btn-primary py-3 px-3">Github</a></p>
+								<p><a href="https://github.com/eniac1546" class="btn btn-primary py-3 px-3">Github</a></p>
 							</div>
 						</div>
 					</div>
@@ -435,7 +435,7 @@ h1 {
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/1wtC10cAQVlo0WMNSIKNeHB654Uqc08qj/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/1Ofa5arJKnxG9trRa_HrSoXqtas0GuO1H/view" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -455,11 +455,11 @@ h1 {
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/krishnanlavanya/AI-Instructed-Yoga" class="block-20 zoom-effect" style="background-image: url('images/yoga.avif');">
+              <a href="https://github.com/eniac1546/AI-Instructed-Yoga" class="block-20 zoom-effect" style="background-image: url('images/yoga.avif');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/krishnanlavanya/AI-Instructed-Yoga">AI Instructed Yoga</a></h3>
+                <h3 class="heading"><a href="https://github.com/eniac1546/AI-Instructed-Yoga">AI Instructed Yoga</a></h3>
                 <p>This AI instructed yoga app uses BlazePose and other advanced technologies to track the user's body movements during yoga practice. It provides real-time feedback on their poses,
 				   helping them make adjustments to improve their alignment and posture. This feedback aims to enhance the user's overall yoga practice, making it more effective and enjoyable.
 				</p>
@@ -468,11 +468,11 @@ h1 {
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/krishnanlavanya/Resume-Skill-Profile-Matching-Project" class="block-20 zoom-effect" style="background-image: url('images/res.jpeg');">
+              <a href="https://github.com/eniac1546/Resume-Skill-Profile-Matching-Project" class="block-20 zoom-effect" style="background-image: url('images/res.jpeg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/krishnanlavanya/Resume-Skill-Profile-Matching-Project">Resume Skill & Profile Matching</a></h3>
+                <h3 class="heading"><a href="https://github.com/eniac1546/Resume-Skill-Profile-Matching-Project">Resume Skill & Profile Matching</a></h3>
                 <p>The project aims to develop a resume skill and profile matching algorithm that helps recruiters find the best suitable match for every job. This algorithm analyzes the skills
 					and qualifications listed in resumes and job descriptions to identify the most relevant candidates for a particular job opening with the match percentage.</p>
               </div>
@@ -480,11 +480,11 @@ h1 {
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/krishnanlavanya/E-Commerce-Power-BI-SalesDashboard" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
+              <a href="https://github.com/eniac1546/E-Commerce-Power-BI-SalesDashboard" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/krishnanlavanya/E-Commerce-Power-BI-SalesDashboard">Online Sales Analysis using Power BI  </a></h3>
+                <h3 class="heading"><a href="https://github.com/eniac1546/E-Commerce-Power-BI-SalesDashboard">Online Sales Analysis using Power BI  </a></h3>
                 <p>
 					The Power BI dashboard designed for a store tracks and analyzes online sales data across the entire database. It utilizes various visualizations in the Power BI platform, such as bar charts
 					,pie charts, line charts, and more, to provide insights into the store's online sales performance. </p>
@@ -496,11 +496,11 @@ h1 {
 	<div class="row d-flex">
 		<div class="col-md-4 d-flex ftco-animate">
 			<div class="blog-entry justify-content-end">
-			<a href="https://github.com/krishnanlavanya/HangmanGame" class="block-20 zoom-effect" style="background-image: url('images/Hangman.png');">
+			<a href="https://github.com/eniac1546/HangmanGame" class="block-20 zoom-effect" style="background-image: url('images/Hangman.png');">
 			</a>
 			<div class="text mt-3 float-right d-block">
 
-			  <h3 class="heading"><a href="https://github.com/krishnanlavanya/HangmanGame">Hangman Game</a></h3>
+			  <h3 class="heading"><a href="https://github.com/eniac1546/HangmanGame">Hangman Game</a></h3>
 			  <p>
 				The primary objective of the Hangman game is to guess the hidden word or phrase correctly before running out of attempts. This game is not only fun but also 
 				helps improve vocabulary and word-solving skills. The game is responsive to different window sizes and is built with HTML, CSS3, and vanilla JavaScript
@@ -510,11 +510,11 @@ h1 {
 		</div>
 		<div class="col-md-4 d-flex ftco-animate">
 			<div class="blog-entry justify-content-end">
-			<a href="https://github.com/krishnanlavanya/Music-and-Mental-Health/tree/main" class="block-20 zoom-effect" style="background-image: url('images/MMH.jpg');">
+			<a href="https://github.com/eniac1546/Music-and-Mental-Health/tree/main" class="block-20 zoom-effect" style="background-image: url('images/MMH.jpg');">
 			</a>
 			<div class="text mt-3 float-right d-block">
 
-			  <h3 class="heading"><a href="https://github.com/krishnanlavanya/Music-and-Mental-Health/tree/main">Music x Mental Health using AWS</a></h3>
+			  <h3 class="heading"><a href="https://github.com/eniac1546/Music-and-Mental-Health/tree/main">Music x Mental Health using AWS</a></h3>
 			  <p>
 				The objective of the Music x Mental Health project is to explore and establish potential correlations between individuals' music preferences
 				and their self-reported mental health status, leveraging AWS services for data storage, querying, visualization, and ETL processes</p>
@@ -523,11 +523,11 @@ h1 {
 		</div>
 		<div class="col-md-4 d-flex ftco-animate">
 			<div class="blog-entry">
-			<a href="https://github.com/krishnanlavanya/Personal-Expense-Tracker" class="block-20 zoom-effect" style="background-image: url('images/expense.jpeg');">
+			<a href="https://github.com/eniac1546/Personal-Expense-Tracker" class="block-20 zoom-effect" style="background-image: url('images/expense.jpeg');">
 			</a>
 			<div class="text mt-3 float-right d-block">
 
-			  <h3 class="heading"><a href="https://github.com/krishnanlavanya/Personal-Expense-Tracker">Personal Expense Tracker</a></h3>
+			  <h3 class="heading"><a href="https://github.com/eniac1546/Personal-Expense-Tracker">Personal Expense Tracker</a></h3>
 			  <p> This Personal helps users manage their finances by allowing them to track their expenses, set reminders, and track their spending habits.
 				It is built using Node.js as the backend language and MongoDB as the database, providing a scalable solution for storing and managing user data.</p>
 			</div>
@@ -581,7 +581,7 @@ h1 {
 						<h2>More projects on<span> Github  </span> </h2>
 						<div class="heading"> <h4> I love to solve business problems &amp; uncover hidden data stories </h4>
 						<br>
-						<p><a href="https://github.com/krishnanlavanya" class="btn btn-primary py-3 px-5">GitHub</a></p>
+						<p><a href="https://github.com/eniac1546" class="btn btn-primary py-3 px-5">GitHub</a></p>
 						</div>
 					</div>
 				</div>
@@ -626,7 +626,7 @@ h1 {
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">lavanyakrishnan1998.lk@gmail.com</a></p>
+	            <p><a href="mailto:info@yoursite.com">rbanerjee.soc2@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -635,7 +635,7 @@ h1 {
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/1wtC10cAQVlo0WMNSIKNeHB654Uqc08qj/view?usp=sharing">CLICK HERE</a></p>
+	            <p><a href="https://drive.google.com/file/d/1Ofa5arJKnxG9trRa_HrSoXqtas0GuO1H/view">CLICK HERE</a></p>
 	          </div>
           </div>
 
@@ -650,7 +650,7 @@ h1 {
 				<br>
 					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
 					  <li class="ftco-animate normal-txt">Find me on  </li>
-					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/krishnanlavanya/"><span class="icon-linkedin"></span></a></li>  
+					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/eniac1546/"><span class="icon-linkedin"></span></a></li>  
 					</ul>
 				<br>
 		   </div>
