--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ h1 {
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Rahul Banerjee</span></p>
 										<p><span class="title-s">Job Role: </span> <span>Security Engineer</span></p>
-										<p><span class="title-s">Professional Experience: </span> <span>5 Years</span></p>
+										<p><span class="title-s">Experience: </span> <span>5 Years</span></p>
 										<p><span class="title-s">Address: </span> <span> NC, USA</span></p>
 									  </div>
 									</div>
