updates with skills

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ h1 {
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Rahul Banerjee</span></p>
-										<p><span class="title-s">Job Role: </span> <span>Security Engineer</span></p>
+										<p><span class="title-s">Job Role: </span> <span>Security Researcher</span></p>
 										<p><span class="title-s">Experience: </span> <span>5 Years</span></p>
 										<p><span class="title-s">Address: </span> <span> NC, USA</span></p>
 									  </div>
@@ -257,12 +257,12 @@ h1 {
 
 								<div class="skill-mf">
 									<p class="title-s" style="color: #ffbd39; margin-top: 20px;">Technical Skills</p>
-									<p><strong>Programming Languages:</strong> Python, Java, C++, Perl</p>
-									<p><strong>Web Dev:</strong> HTML5, CSS3, JavaScript, Angular, React.js, Node.js, Express.js, GraphQL</p>
-									<p><strong>Databases:</strong> MySQL, MongoDB, InfluxDB</p>
-									<p><strong>Cloud Technologies:</strong> Amazon Web Services (S3, RDS, SDK, IAM, EC2, CloudFront, Lambda), Azure Fundamentals, Azure Machine Learning Studio</p>
-									<p><strong>Tools and Softwares:</strong> Tableau, LISp-Miner, Excel, VMware, VS Code, XCode, Git, JUnit, Selenium, Cypress, Postman, Docker, JIRA, Confluence.</p>
-									<p><strong>Certifications:</strong> CCNA, CompTIA Network+, AWS Cloud, AWS Machine Learning, MongoDB for SQL by MongoDB University</p>
+									<p><strong>Programming:</strong> Python, Bash, SQL, KQL, JavaScript</p>
+									<p><strong>OS:</strong> Kali Linux, Parrot, Ubuntu, Windows</p>
+									<p><strong>Compliance Frameworks:</strong> PCI-DSS, SOX, SOC 2, NIST, GDPR, ISO 27001/2.</p>
+									<p><strong>DevSecOps:</strong> Amazon Web Services (Inspector, GuardDuty, Security Hub, Macie, EC2, S3, IAM, EC2, CloudFront, Lambda)</p>
+									<p><strong>Tools:</strong> AWS, Splunk, Microsoft SentinelOne, Kibana, ELK Stack, IBM Qrader, Palo Alto Firewall, Cisco Tallos, Databricks, Nessus, ServiceNow, Metasploit, Burp Suite, Wireshark, Tableau, Excel, VMware, VS Code, XCode, Git, Postman, Docker, JIRA, Microsoft Suite. </p>
+									<p><strong>Technologies:</strong> SIEM, EDR, XDR, IDS/IPS, Incident Response, Vulnerability Management, Penetration Testing(VAPT, WAPT), SAST, DAST, Cyber Kill Chain, MITRE ATT&CK, Docker Security, DLP, CSIRT, Asset Management, </p>
 								</div>						
 							</div>
 						</div>
