contact_me section

--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@ h1 {
           			<span class="icon-map-signs"></span>
           		</div>
           		<h3 class="mb-4">Address</h3>
-	            <p>North Carolina, United States</p>
+	            <p>NC, United States</p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -616,8 +616,8 @@ h1 {
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-phone2"></span>
           		</div>
-          		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://0101010101">+ 1 408 313 6259</a></p>
+          		<h3 class="mb-4">Contact</h3>
+	            <p><a href="tel://0101010101">+ 1 (704) 287 8906</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -625,7 +625,7 @@ h1 {
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-paper-plane"></span>
           		</div>
-          		<h3 class="mb-4">Email Address</h3>
+          		<h3 class="mb-4">Email</h3>
 	            <p><a href="mailto:info@yoursite.com">rbanerjee.soc2@gmail.com</a></p>
 	          </div>
           </div>
@@ -634,8 +634,8 @@ h1 {
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-globe"></span>
           		</div>
-          		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/1Ofa5arJKnxG9trRa_HrSoXqtas0GuO1H/view">CLICK HERE</a></p>
+          		<h3 class="mb-4">Resume</h3>
+	            <p><a href="https://drive.google.com/file/d/1Ofa5arJKnxG9trRa_HrSoXqtas0GuO1H/view">Download</a></p>
 	          </div>
           </div>
 
@@ -650,7 +650,7 @@ h1 {
 				<br>
 					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
 					  <li class="ftco-animate normal-txt">Find me on  </li>
-					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/eniac1546/"><span class="icon-linkedin"></span></a></li>  
+					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/b-rahul/"><span class="icon-linkedin"></span></a></li>  
 					</ul>
 				<br>
 		   </div>
