--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@ h1 {
 			<br>
 			<div class="row justify-content-center">
 				<div class="col-md-7 ftco-animate text-center">
-					<h2>Have a<span> Question?  </span> <a href="https://forms.gle/32Nt4V3Rt9j783Eg9" class="btn btn-primary py-3 px-5">Click Here</a> </h2>
+					<h2>Have a<span> Question?  </span> <a href="https://forms.gle/9MASHTNinL7C3cui8" class="btn btn-primary py-3 px-5">Click Here</a> </h2>
 				</div>
 			</div>
 				<br>
@@ -665,7 +665,7 @@ h1 {
 		  <div class="row">
 			<div class="col-md-12 text-center">
   
-	Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved, Lavanya Krishnan
+	Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved, Rahul Banerjee
 	
 			</div>
 		  </div>
