--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@ h1 {
 									<p><strong>DevSecOps:</strong> Amazon Web Services (Inspector, GuardDuty, Security Hub, Macie, EC2, S3, IAM, EC2, CloudFront, Lambda)</p>
 									<p><strong>Tools:</strong> AWS, Splunk, Microsoft SentinelOne, Kibana, ELK Stack, IBM Qrader, Palo Alto Firewall, Cisco Tallos, Databricks, Nessus, ServiceNow, Metasploit, Burp Suite, Wireshark, Tableau, Excel, VMware, VS Code, XCode, Git, Postman, Docker, JIRA, Microsoft Suite. </p>
 									<p><strong>Technologies:</strong> SIEM, EDR, XDR, IDS/IPS, Incident Response, Vulnerability Management, Penetration Testing(VAPT, WAPT), SAST, DAST, Cyber Kill Chain, MITRE ATT&CK, Docker Security, DLP, CSIRT, Asset Management, </p>
+									<p><strong>Certifications:</strong> ISC2 CISSP (Preparing), CompTia CySa+(Preparing) AWS Solution Architect Associate, Certified Ethical Hacker (CEH v10), AWS Security Specialty, Splunk Core, Palo Alto Networks - SOC, Cloud Security, Cyberark Certified Trustee V10, Qualys Certified Trustee, Fortinet Network Security Associate(NSE 1,2,3), Security Operations Center Analyst (CSOC) by IISC, CISCO Cyber Security Essential  </p>
 								</div>						
 							</div>
 						</div>
