--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ h1 {
 									<p><strong>DevSecOps:</strong> Amazon Web Services (Inspector, GuardDuty, Security Hub, Macie, EC2, S3, IAM, EC2, CloudFront, Lambda)</p>
 									<p><strong>Tools:</strong> AWS, Splunk, Microsoft SentinelOne, Kibana, ELK Stack, IBM Qrader, Palo Alto Firewall, Cisco Tallos, Databricks, Nessus, ServiceNow, Metasploit, Burp Suite, Wireshark, Tableau, Excel, VMware, VS Code, XCode, Git, Postman, Docker, JIRA, Microsoft Suite. </p>
 									<p><strong>Technologies:</strong> SIEM, EDR, XDR, IDS/IPS, Incident Response, Vulnerability Management, Penetration Testing(VAPT, WAPT), SAST, DAST, Cyber Kill Chain, MITRE ATT&CK, Docker Security, DLP, CSIRT, Asset Management, </p>
-									<p><strong>Certifications:</strong> ISC2 CISSP (Preparing), CompTia CySa+(Preparing) AWS Solution Architect Associate, Certified Ethical Hacker (CEH v10), AWS Security Specialty, Splunk Core, Palo Alto Networks - SOC, Cloud Security, Cyberark Certified Trustee V10, Qualys Certified Trustee, Fortinet Network Security Associate(NSE 1,2,3), Security Operations Center Analyst (CSOC) by IISC, CISCO Cyber Security Essential  </p>
+									<!--<p><strong>Certifications:</strong> ISC2 CISSP (Preparing), CompTia CySa+(Preparing) AWS Solution Architect Associate, Certified Ethical Hacker (CEH v10), AWS Security Specialty, Splunk Core, Palo Alto Networks - SOC, Cloud Security, Cyberark Certified Trustee V10, Qualys Certified Trustee, Fortinet Network Security Associate(NSE 1,2,3), Security Operations Center Analyst (CSOC) by IISC, CISCO Cyber Security Essential  </p>-->
 								</div>						
 							</div>
 						</div>
@@ -278,10 +278,10 @@ h1 {
 								
 								<p>
 									I’m Rahul Banerjee, a cybersecurity professional with over six years of experience in threat detection, vulnerability management, and incident response. Currently, I work as a Security Researcher, focusing on advanced attack simulations for IoT and grid computing to help organizations fortify their defenses against evolving threats. My background spans SOC operations, penetration testing, and real-time threat intelligence, and I actively sharpen my skills through CTF competitions, ranking among the top 5% on TryHackMe. Armed with certifications like CISSP, AWS Security Specialty, and Splunk Core, I’m driven by a passion for continuous learning and innovation in the cybersecurity space. I aim to join organizations where I can contribute to cutting-edge R&D projects as a Software Engineer. 
-									Feel free to connect with me :) </p>
+									Feel free to connect me. </p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Cyber Security &amp; Security Operations </span></li>
-									<li class="d-flex"><span>Education:</span> <span>Master of Science, Bachelor of Technology</span></li>
+									<li class="d-flex"><span>Education:</span> <span>MS, BTech</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Bengali </span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Football, Music, Biking </span></li>
 									
@@ -312,12 +312,10 @@ h1 {
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-10 heading-section text-center ftco-animate">
-          	<h1 class="big big-2">Resume</h1>
-			  <h2 class="mb-4" style="color: #ffbd39;">Resume</h2>
-            <p>
-				Throughout my roles as a Graduate Assistant at the University of North Carolina at Charlotte, Software Developer Intern at Proso AI, 
-				Software Engineer at Capgemini, and Software Engineer Intern at Cadence Design Systems, I've consistently demonstrated my ability to design 
-				and implement innovative solutions, optimize projects for efficiency, and contribute significantly to team success.</p>
+          	<!--<h1 class="big big-2">Certs</h1>-->
+			  <h2 class="mb-4" style="color: #ffbd39;">Certifications</h2>
+            <h5>
+				ISC2 CISSP (Preparing) &#x2022; CompTia CySa+(Preparing) &#x2022; AWS Solution Architect Associate &#x2022; Certified Ethical Hacker (CEH v10) &#x2022; AWS Security Specialty &#x2022; Splunk Core &#x2022; Palo Alto Networks - SOC, Cloud Security &#x2022; Cyberark Certified Trustee V10 &#x2022; Qualys Certified Trustee &#x2022; Fortinet Network Security Associate(NSE 1,2,3) &#x2022; Security Operations Center Analyst (CSOC) by IISC &#x2022; CISCO Cyber Security Essential  </h5>
           </div>
         </div>
 
@@ -330,15 +328,17 @@ h1 {
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">Jan 2023 - Dec 2023</span>
-						<h2>Graduate Assistant </h2>
+						<span class="date">Sep 2013 - Present</span>
+						<h2>Security Researcher</h2>
 						<span class="position">University of North Carolina at Charlotte</span>
-						<p class="mt-4">The University of North Carolina at Charlotte is North Carolina's urban research university, with a diverse student body and programs. 
+						<p class="mt-4">Skills: Penetration Testing, DevSecOps, Python, OT Security 
 							<ul>
-								<li>Designed and implemented a comprehensive full-stack platform consisting of more than 150 research papers, providing valuable resources
-									for students and professors in topic selection and project preparation for end-of-semester projects.</li>
-								<li>Optimized AI-augmented WebRTC project, reducing per frame delay by 30%, enhancing jitter , improving real-time video analysis for 500+
-									users, and efficiently storing critical data in InfluxDB.</li>
+								<li>Developed a real-time smart grid attack simulation with 100+ IoT devices and Tesla EV Chargers to stress-test cybersecurity controls
+										during power outages. Collaborated with NC State and CESAR, discovering 5+ critical vulnerabilities (CVSS 7.0).</li>
+								<li>Developing advanced exploit techniques, including ROP automation and program synthesis, to bypass standard IoT software defenses, enabling comprehensive vulnerability assessments.</li>
+								<li>Designing and simulating large-scale IoT botnet attacks using NS3DockerEmulator and QEMU, creating testbeds for analyzing and mitigating vulnerabilities in cyber-physical systems.</li>
+								<li>Researching and implementing firmware-based, network-based, and cloud-based attack techniques while contributing to defensive strategies such as software diversity and probabilistic attack reduction.</li>
+								<li>Actively reviewing research papers on cyber-physical systems and working on creating an original research publication to advance the field of IoT and cybersecurity.</li>
 							</ul>
 						</p>
 					</div>
@@ -347,15 +347,16 @@ h1 {
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">June 2023 - Aug 2023</span>
-						<h2>Software Developer Intern</h2>
-						<span class="position">Proso AI</span>
-						<p class="mt-4">Proso AI offers AI, cloud services, and tech consultancy to solve real-world problems and increase revenue. 
+						<span class="date">Aug 2022 - Aug 2023</span>
+						<h2>Sr Security Engineer</h2>
+						<span class="position">Valuelabs Solutions</span>
+						<p class="mt-4">Skills: SOC, SIEM, Log Analysis, Malware Analysis, Splunk. 
 							<ul>
-								<li>Leveraged cutting-edge technologies (scikit-learn, Python, TensorFlow, Azure ML Studio) to build an automated system with advanced
-									machine learning algorithms (CART, NLP), resulting in precise talent acquisition decisions, impacting over 300 successful hires..</li>
-								<li>Used Postman and Affinda to interact with RESTful APIs, including the ChatGPT API, facilitating smooth communication; managed HTTP
-									requests, handled responses, and seamlessly integrated API data into applications to enhance functionality.</li>
+								<li>Served as the primary liaison for Shutterfly and SnapFish from India to manage vulnerability assessments and remediation efforts. Leveraged
+									Nessus to perform regular scans, identifying over 50 high-risk (CVSS 7.0+) vulnerabilities and remediation within defined SLAs.</li>
+								<li>Developed 12 Zscaler use cases aligned with MITRE ATT&CK framework, improving SOC detection through threat modeling.</li>
+								<li>Led phishing email campaigns with Proofpoint to boost email security and threat detection, and managed SIEM system enhancements, resulting in a 30% increase in threat detection and 25% reduction in false alerts.</li>
+								<li>Resolved over 50 critical security incidents escalated by Level 1 associates using a suite of tools including Microsoft Sentinel One, Axonius, Cisco Talos, Akamai, and Splunk, achieving a notable 25% decrease in the recurrence of such incidents.</li>
 							</ul>
 						</p>
 					</div>
@@ -364,19 +365,18 @@ h1 {
 				<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">Oct 2020 - July 2022</span>
-						<h2>Analyst / Software Engineer</h2>
-						<span class="position"> Capgemini </span>
-						<p class="mt-4">Capgemini Engineering is a leading organization in technology, research and development consulting and organizational and information technology consulting. 
+						<span class="date">Jan 2020 - July 2022</span>
+						<h2>Cyber Security Analyst</h2>
+						<span class="position"> Tata Consultancy Services </span>
+						<p class="mt-4">Skills: SOC, Vulnerability Management, Nessus, Splunk, Qrader, ServiceNow. 
 							<ul>
-								<li>Worked closely with the product team to build intelligent search functionality in Angular for an e-commerce site with a catalog of 500+ products,
-									leading to a 22% increase in page views per session.</li>
-									<li>Developed 10 RESTful API endpoints on the backend using Express.js to fetch consumer details regarding the order, facilitating seamless
-									communication between the front end and back end.</li>
-									<li>Assisted in converting an existing PowerBuilder code to SQL and Java to support a new Flex application.</li>
-									<li>Wrote 43 automated tests to enhance code quality in the development process, and conducted comprehensive software testing, including
-									functional and unit testing for scripts and services, successfully identifying and correcting 30 critical and 20 major bugs.</li>
-									<li>Followed agile development practices, including daily stand-ups, sprint planning, backlog grooming, and regular product demo days with
+								<li>Monitored and analyzed 2000+ monthly security alerts in real-time in a managed SOC for clients like AltaGas, Aldi, and Belgium
+									Railways, triaging incidents and maintaining clear action plans to ensure timely threat response.</li>
+								<li>Handled audits for asset management for Tata Steel Europe by integrating Axonious with Splunk, maintaining 100% asset compliance.</li>
+								<li>Spearheaded Log4j patch management for 4000+ internal hosts in Aldi/TSE production environment, achieving 100% compliance.</li>
+								<li>Conducted weekly VA scans for Vulnerability Management on legacy systems using Nessus, identifying 20+ vulnerabilities per scan
+									and prioritizing fixes to improve data loss prevention (DLP) capabilities.</li>
+								<li>Followed agile development practices, including daily stand-ups, sprint planning, backlog grooming, and regular product demo days with
 									product stakeholders.</li>									
 							</ul>
 						</p>
@@ -386,16 +386,13 @@ h1 {
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">June 2019 - Aug 2019</span>
-						<h2>Software Engineer Intern </h2>
-						<span class="position">Cadence Design Systems</span>
-						<p class="mt-4">Cadence is a leading EDA and Intelligent System Design provider delivering hardware, software, and IP for electronic design. 
+						<span class="date">Jan 2019 - Dec 2019</span>
+						<h2>Jr Penetration Tester </h2>
+						<span class="position">Berry9 IT Services</span>
+						<p class="mt-4">Skills: Penetration Testing, Burp Suite, ZAP, NMap, Metasploit 
 							<ul>
-								<li>Integrated dynamic modules into the organization's Confluence website using Perl, HTML, CSS, and JavaScript, enhancing content aesthetics and user engagement,
-									resulting in a 25% increase in satisfaction.</li>
-								<li>Thoroughly tested the 'Cadence Help' application on multiple versions of Windows and Linux,optimizing user performance and resolving compatibility issues,
-									resulting in a 20% improvement in overall application stability.</li>
-
+								<li>Executed 25+ web app scans using Burp Suite, identifying 20 critical OWASP Top 10 vulnerability (e.g., SQLi, XSS).</li>
+								<li>Documented 20 critical vulnerabilities and provided targeted mitigation strategies in reports and SOPs.</li>
 							</ul>
 						</p>
 					</div>
@@ -415,8 +412,8 @@ h1 {
 			<div class="row">
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date"> Aug 2022- Dec 2023</span>
-    					<h2>Master of Science</h2>
+    					<span class="date"> Aug 2023 - May 2025</span>
+    					<h2>MS</h2>
 						<h3>Cyber Security</h3>
     					<span class="position">University of North Carolina at Charlotte</span>
     					<p class="mt-4">GPA : 3.8 </p>
@@ -425,8 +422,8 @@ h1 {
 
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">Aug 2016- Sep 2020</span>
-    					<h2>Bachelor of Technology</h2>
+    					<span class="date">July 2015 - May 2019</span>
+    					<h2>BTech</h2>
 						<h3>Information Technology</h3>
     					<span class="position">Jawaharlal Nehru Technological University</span>
     					<p class="mt-4">GPA : 3.0 </p>
